# Blurp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  gdb.py
cmake/: deploy.cmake  generate_exefs.cmake  module.cmake  module_config.cmake
config/: config.cmake
lib/blurp/: CMakeLists.txt
lib/blurp/include/blurp/: init.h
lib/blurp/src/: alloc.cpp  mod0.cpp  module.cpp
sysmodules/boot2/: CMakeLists.txt
sysmodules/boot2/config/: config.cmake  npdm.json  toolbox.json
sysmodules/boot2/src/: main.cpp
